[gd_scene load_steps=2 format=3 uid="uid://bk4wpqxddvis5"]

[ext_resource type="Script" uid="uid://do43rfdqsc82h" path="res://hud.gd" id="1_37p78"]

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_37p78")

[node name="ScoreLabel" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_top = 25.0
offset_right = 20.0
offset_bottom = 48.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 32
text = "0"

[node name="StartGameButton" type="Button" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -41.5
offset_top = -120.0
offset_right = 41.5
offset_bottom = -67.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 32
text = "Start"

[node name="Message" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -43.5
offset_top = -11.5
offset_right = 43.5
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 64
text = "Flappy Bird"

[node name="MessageTimer" type="Timer" parent="."]
